cmake_minimum_required(VERSION 3.8)
project(cpp_param)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(example_interfaces REQUIRED)

add_executable(talker_node src/publisher.cpp)

ament_target_dependencies(talker_node rclcpp example_interfaces)

install(TARGETS
  talker_node
  DESTINATION lib/${PROJECT_NAME}
)

ament_package()
